# shibboleth-resolver

./: .cproject  .gitignore  .project  Makefile.am  Makefile.in  Portfile.in  aclocal.m4  config.h.in  config_win32.h  configure  configure.ac  cpp-sp-resolver.sln  resolver.spec.in
debian/: README.Debian  README.source  changelog  control  copyright  rules
doc/: CREDITS.txt  Makefile.am  Makefile.in  NOTICE.txt  README.txt
shibresolver/: Makefile.am  internal.h  resolver-lite.vcxproj  resolver.cpp  resolver.h  resolver.rc  resolver.vcxproj
src/: Makefile.am  Makefile.in  resolver-lite.vcxproj  resolver.vcxproj
src/shibresolver/: base.h  config_pub.h.in  config_pub_win32.h  internal.h  resolver.cpp  resolver.h  resolver.rc  resource.h
